<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:alpha="0.85"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/download">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/picture"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:alpha=".8"
            android:gravity="center"
            android:text="Register"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="Email/Username "
            android:background="@color/little_pink"
            android:alpha=".6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@color/little_pink"
            android:alpha=".6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnreg"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/loginnow"
        android:paddingTop="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:alpha=".6"
        android:textStyle="bold"
        android:text="@string/click_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>